# closestSurfacePointQueries

./: CMakeLists.txt  aosExample.cpp  benchmark.cpp  bvh.cpp  bvh.h  distanceQueries.cpp  distanceQueries.h  distanceTest.cpp  example.cpp  makefile  soaExample.cpp  vec.h
examples/: aosExample.cpp  benchmark.cpp  soaExample.cpp
src/: bvh.cpp  bvh.h
